tests/NormalTests/paczka1/small_fuzzy/46792919.err
Error in line 3: dT1FLwnjYIc S930 65,2
Error in line 5: DLSlAG S55 82,4
